--- a/Notes/API_sqlalchemy.ipynb
+++ b/Notes/API_sqlalchemy.ipynb
@@ -82,6 +82,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "[Relacionamento entre entidades](https://docs.sqlalchemy.org/en/14/orm/basic_relationships.html)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 50,
    "metadata": {},
@@ -287,10 +294,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Estou entrando\n",
+      "Estou no meio\n",
+      "Estou saindo\n"
+     ]
+    }
+   ],
+   "source": [
+    "class OlaMundo:\n",
+    "    def __enter__(self):\n",
+    "        print(\"Estou entrando\")\n",
+    "        \n",
+    "    def __exit__(self, exc_type, exc_val, exc_tb):\n",
+    "        print(\"Estou saindo\")\n",
+    "        \n",
+    "with OlaMundo() as ola:\n",
+    "    print(\"Estou no meio\")"
+   ]
   }
  ],
  "metadata": {
